--- a/register.html
+++ b/register.html
@@ -1,1 +1,16 @@
-<html></html>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>The input Element</h2>
+
+<form action="register.php" method="POST">
+<fieldset>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br><br>
+  <input type="submit" value="Submit">
+</fieldset>
+</form>
+
+</body>
+</html>
