--- a/register.html
+++ b/register.html
@@ -2,13 +2,23 @@
 <html>
 <body>
 
-<h2>The input Element</h2>
-
 <form action="register.php" method="POST">
 <fieldset>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"><br><br>
-  <input type="submit" value="Submit">
+<legend>Register</legend>
+
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name"><br>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email"><br>
+
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password"><br>
+
+  <label for="dob">Date of Birth:</label>
+  <input type="date" id="dob" name="dob"><br>
+  
+  <input type="submit" value="Register">
 </fieldset>
 </form>
 
