--- a/register.html
+++ b/register.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <link rel="stylesheet" href="register.css">
+    </head>
 <body>
 
 <form action="register.php" method="POST">
 <fieldset>
 <legend>Register</legend>
 
-  <label for="name">Name:</label>
+
+  <div class="c20"><label for="name">Name:</label></div>
   <input type="text" id="name" name="name"><br>
 
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email"><br>
+  <div class="c20"><label for="email">Email:</label></div>
+  <div class="c60"><input type="email" id="email" name="email"><br></div>
 
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password"><br>
+  <div class="c20"><label for="password">Password:</label></div>
+  <div class="c60"><input type="password" id="password" name="password"><br></div>
 
-  <label for="dob">Date of Birth:</label>
-  <input type="date" id="dob" name="dob"><br>
+  <div class="c20"><label for="dob">Date of Birth:</label></div>
+  <div class="c60"><input type="date" id="dob" name="dob"><br></div>
   
-  <input type="submit" value="Register">
+
+  <input type="submit" id="submit" value="Register">
 </fieldset>
 </form>
 
